Fixed issues with messages & donations
- Added LICENSE file
- Fixed text being cut off
- Donations now show in chat
- Extension's internal name now reflects web-store name

--- a/main.css
+++ b/main.css
@@ -8,8 +8,8 @@ yt-live-chat-item-list-renderer[allow-scroll] #item-scroller.yt-live-chat-item-l
   overflow-y: hidden;
 }
 
-.newChat img.emoji,
-.newChat img.small-emoji {
+.Twitchy-Youtube-Chat img.emoji,
+.Twitchy-Youtube-Chat img.small-emoji {
   width: 1.5em;
   height: 1.5em;
   object-fit: contain;
@@ -17,36 +17,37 @@ yt-live-chat-item-list-renderer[allow-scroll] #item-scroller.yt-live-chat-item-l
   margin-left: 0.25em;
 }
 
-.newChat {
+.Twitchy-Youtube-Chat {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
   height: 100%;
   width: 100%;
   margin-left: 0.75%;
+  margin-right: 0.75%;
   padding-bottom: 10px;
   font-size: medium;
   overflow-y: auto;
   overflow-x: hidden;
 }
 
-.newChat_messages {
-  word-spacing: 7px;
-  margin-right: 0.25em;
+.Twitchy-Youtube-Chat_messages {
+  flex-wrap: wrap;
 }
-.newChat_authors_guest {
+
+.Twitchy-Youtube-Chat_authors_guest {
   color: rgb(170, 170, 170);
   text-decoration: none;
 }
-.newChat_authors_member {
+.Twitchy-Youtube-Chat_authors_member {
   color: rgb(33, 167, 0);
   text-decoration: none;
 }
-.newChat_authors_moderator {
+.Twitchy-Youtube-Chat_authors_moderator {
   color: rgb(38, 0, 255);
   text-decoration: none;
 }
-.newChat_authors_owner {
+.Twitchy-Youtube-Chat_authors_owner {
   color: rgb(255, 0, 0);
   text-decoration: none;
 }
